Added get and set for hasChosen boolean inside player class.

--- a/src/ooga/View/charSelect_buttons.properties
+++ b/src/ooga/View/charSelect_buttons.properties
@@ -1,4 +1,4 @@
-Player_1_Ready = p1Ready
-Player_2_Ready = p2Ready
+Choose_Player_1 = p1Ready
+Choose_Player_2 = p2Ready
 Help = help
 Settings = settings
