--- a/src/ooga/Resources/stylesheets/buttonStyle.properties
+++ b/src/ooga/Resources/stylesheets/buttonStyle.properties
@@ -25,5 +25,14 @@ linear-gradient(#f5f5f5 0%, #dbdbdb 50%, #cacaca 51%, #d7d7d7 100%);\
 -fx-text-fill: #333333;\
 -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
 
+labelText = -fx-background-color: \
+rgba(0,0,0,0.08),\
+linear-gradient(#9a9a9a, #909090),\
+linear-gradient(white 0%, #f3f3f3 50%, #ececec 51%, #f2f2f2 100%); \
+-fx-background-insets: 0 0 -1 0,0,1;\
+-fx-background-radius: 5,5,4;\
+-fx-padding: 3 30 3 30;\
+-fx-text-fill: #242d35;\
+-fx-font-size: 14px;
 
 
