Added play local nad play online buttons to home screen

--- a/src/ooga/Resources/stylesheets/buttonStyle.properties
+++ b/src/ooga/Resources/stylesheets/buttonStyle.properties
@@ -35,4 +35,8 @@ linear-gradient(white 0%, #f3f3f3 50%, #ececec 51%, #f2f2f2 100%); \
 -fx-text-fill: #242d35;\
 -fx-font-size: 14px;
 
+playButtonsText = -fx-background-color: rgba(255,0,0,1);\
+  -fx-text-fill: white;\
+  -fx-font-size: 100px;\
+  -fx-effect: dropshadow( one-pass-box , black , 20 , 0.6 , 2 , 0);
 
